# NewSantoline

./: .gitignore  README.md  path.ini  path.ini.old  paths.copy.json  py3-env-cmd.bat  py3-env.bat  run.bat  run.lnk  start.bat
Algo3/: AlgoOpt.cpp  AlgoOpt.hpp  CMakeLists.txt  Choc.cpp  Choc.hpp  CoinCase.cpp  CoinCase.h  ConvexHull.cpp  ConvexHull.hpp  EllipseOpt.cpp  EllipseOpt.hpp  Fonction_non_finie.txt  Point.cpp  Point.h  PointOpt.cpp  PointOpt.hpp  Pseudo_Code.txt  SommetCase.cpp  SommetCase.h  Utils.cpp  Utils.h  Vecteur.cpp  Vecteur.h  VitesseOpt.cpp  VitesseOpt.hpp  main.cpp
Documentation/: template.json
SantolinePyQT5/: main.py
data/: alpes.asc  reglage.json  subzone.asc  subzone_225_12_25m_ang.asc  subzone_225_12_25m_cld.asc  subzone_225_12_25m_vel.asc  subzone_225_9_25m_ang.asc  subzone_225_9_25m_cld.asc  subzone_225_9_25m_vel.asc  subzone_270_8_25m_ang.asc  subzone_270_8_25m_cld.asc  subzone_270_8_25m_vel.asc  var.asc
data/communication/: parametreAlgo-copy.json
data/logs/: temps.txt
data/maps/: map copy.json
data/templates/: params.json
data/test/: map.json
doc/scilab/: algo3.sci  algo_opt_graph.sci  algo_opt_propagation.sci  algo_opt_vit.sci  (+19 more)
save/: pycharm.cmd  pyqgis.cmd  run.bat
scripts/: build.bat
src/: README.md
src/Epilobe/: CMakeCache.txt  CMakeLists.txt  Epilobe.cpp  Epilobe.h  Makefile  NoConfigException.hpp  cmake_install.cmake  main.cpp  params copy.json  params.json
src/algo/: Algo.cpp  Algo.h  Algo_save.cpp  CMakeLists.txt  ConvexHull.cpp  ConvexHull.hpp  Point.cpp  Point.h  Utils.cpp  Utils.h  Vecteur.cpp  Vecteur.h  WindMapData.cpp  WindMapData.h  carteVent.json  compil.bat  ellipse.cpp  ellipse.h  geometry.cpp  geometry.h  main.cpp  parametreAlgo.json
test/: .gitignore  README.md
(+166 files in other folders)
